--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <div class="container">
             <div class="navbar">
             <nav>
-                <h1  class="logo"> <i class="fa-sharp fa-solid fa-g fa-flip fa-2xl"></i>OURAV</i></h1>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                <h1  class="logo">GOURAV</i></h1>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <i class="fa-solid fa-times" onclick="closeMenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openMenu()"></i>
             </nav>
             </div>
             <div class="header-text">
@@ -74,7 +76,7 @@
         </div>
     </div>
 <!------------------------services----------------->
-<div class="services">
+<div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
@@ -108,25 +110,25 @@
             <div class="work">
                 <img src="images/work-1.png" alt="">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quod non ex amet error corporis odio hic dolores nesciunt alias harum iste autem officiis, repellendus officia libero fugiat est quaerat?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Face-Detection System</h3>
+                    <p>A Face Detection Attendance System uses real-time facial recognition to automatically mark attendance and update the database, providing an efficient and contactless solution.</p>
+                    <a href="https://github.com/gourav-017/Face_Recognition_System"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-2.png" alt="">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quod non ex amet error corporis odio hic dolores nesciunt alias harum iste autem officiis, repellendus officia libero fugiat est quaerat?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Music Player App</h3>
+                    <p>A music player app with basic functionality allows users to play, pause, and skip to the next track. It provides simple controls for seamless music playback.</p>
+                    <a href="https://github.com/gourav-017/Music_Player_Project"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png" alt="">
+                <img src="images/work-3.png" alt=""  >
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quod non ex amet error corporis odio hic dolores nesciunt alias harum iste autem officiis, repellendus officia libero fugiat est quaerat?</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Weather App</h3>
+                    <p>A weather app provides real-time weather updates, including temperature, humidity, wind speed, and forecasts for any location. It helps users plan their day by offering accurate and timely weather information.</p>
+                    <a href="https://github.com/gourav-017/Weather_app_project"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -142,12 +144,12 @@
                 <p><i class="fa-solid fa-paper-plane"></i>gouravrajput6342@gmail.com</p>
                 <p><i class="fa-solid fa-square-phone"></i>6006719782</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href=" https://wa.me/qr/NUKM67TNFL6RJ1 "><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/gourav_rajput017"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/gourav-singh-a7bab2304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/gourav-017"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/ADIT_CP_GouravSingh.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/GouravSingh.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
@@ -166,7 +168,16 @@
 </div>
 
 
-<script src="app.js">
+<script src="app.js"
+>
+
 </script>
+<script>let sidemenu=document.getElementById("sidemenu");
+    function openMenu(){
+       sidemenu.style.right="0";
+    }
+    function closeMenu(){
+       sidemenu.style.right="-200px";
+    }</script>
 </body>
 </html>
