--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="navbar">
             <nav>
-                <h1  class="logo">GOURAV</i></h1>
+               <div  class="logo"><h1> GS</h1></div> 
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -27,7 +27,7 @@
             </div>
             <div class="header-text">
                 <p>Aspiring Full-Stack Developer</p>
-                <h1>Hi, I am <span>Gourav</span><br> Singh Welcome To My Profile </h1>
+                <h1>Hi, I'm <span>Gourav</span><br> Singh Welcome To My Profile </h1>
             </div>
         </div>
     </div>
@@ -83,20 +83,20 @@
              <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Full-Stack Development</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, mollitia sint. Illo voluptas eligendi, totam illum, atque, sequi ratione animi quibusdam tenetur minus nulla doloribus soluta reiciendis incidunt ullam ex?</p>
-                <a href="#">Learn More..</a> 
+                <p>Full Stack Development involves working on both the front-end (what users see) and back-end (the server and database) of a web application. A Full Stack Developer is skilled in using a variety of technologies to create complete web solutions, handling everything from user interfaces to server-side logic.</p>
+                <a href="https://developer.mozilla.org/en-US/">Learn More..</a> 
             </div>
             <div>
                 <i class="fa-solid fa-pen-nib"></i>
                 <h2>Responsive Web Design</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, mollitia sint. Illo voluptas eligendi, totam illum, atque, sequi ratione animi quibusdam tenetur minus nulla doloribus soluta reiciendis incidunt ullam ex?</p>
-                <a href="#">Learn More..</a> 
+                <p >Responsive design ensures websites adapt to different screen sizes and devices, providing a seamless user experience on desktops, tablets, and smartphones. It uses flexible layouts and media queries to adjust the design automatically.</p>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/CSS_layout/Responsive_Design">Learn More..</a> 
             </div>
             <div>
                 <i class="fa-solid fa-database"></i>
                 <h2>DataBase Management</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, mollitia sint. Illo voluptas eligendi, totam illum, atque, sequi ratione animi quibusdam tenetur minus nulla doloribus soluta reiciendis incidunt ullam ex?</p>
-                <a href="#">Learn More..</a> 
+                <p>A database is an organized collection of data that is stored and accessed electronically.It allows for efficient storage, retrieval, and management of data, making it easier to maintain and manipulate large amounts of information.</p>
+                <a href="https://developer.mozilla.org/en-US/docs/Glossary/Database">Learn More..</a> 
             </div>
             
         </div>
