--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </nav>
             </div>
             <div class="header-text">
-                <p>Aspiring Full-Stack Developer</p>
-                <h1>Hi, I'm <span>Gourav</span><br> Singh Welcome To My Profile </h1>
+                <p>Passionate About Full-Stack Development</p>
+                <h1>Hi, I'm <span>Gourav Singh</span><br>Turning Ideas Into Scalable Web Applications</h1>
             </div>
         </div>
     </div>
@@ -42,8 +42,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Student of Computer Engineering having experience in designing, developing, and deploying robust web applications.My aim is to explore new technologies and to get the knowledge also to create innovative ideas and solutions to the real world problems which can leads to develop the organization in the best way possible to explore 
-                    new technologies.I aspire to become a full-time Software developer or Web developer in a reputed company .</p>
+                <p>Enthusiastic and goal-oriented Computer Engineering student with a strong foundation in full-stack web development. Skilled in designing, developing, and deploying responsive web applications using modern technologies. Passionate about learning new tools and frameworks, and eager to apply problem-solving skills to real-world challenges. Looking for an entry-level position as a Full-Stack Developer or Software Developer to contribute to innovative projects and grow within a forward-thinking organization. .</p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -54,7 +53,7 @@
                             <li><span>Programming Language:</span><br>Basics of C++, Java, SQL</li>
                             <li><span>Web Development:</span><br>HTML,CSS,JavaScript</li>
                             <li><span>DataBases:</span><br>PostgreSQL,Firebase,MySQL</li>
-                            <li><span>Frameworks and Libraries:</span><br>React.js,Bootstrap,</li>
+                            <li><span>Frameworks and Libraries:</span><br>React.js,Bootstrap,Tailwind CSS</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -194,7 +193,7 @@
             msg.innerHTML="Message sent successfully"
             setTimeout(function(){
                 msg.innerHTML=""
-            },4000)
+            },3000)
             form.reset();
         })
         .catch(error => console.error('Error!', error.message))
