--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="header-text">
                 <p>Passionate About Full-Stack Development</p>
-                <h1>Hi, I'm <span>Gourav Singh</span><br>Turning Ideas Into Scalable Web Applications</h1>
+                <h1>Hi, I'm <span>Gourav Singh</span><br></h1><h2>Turning Ideas Into Scalable Web Applications</h2>
             </div>
         </div>
     </div>
