--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Enthusiastic and goal-oriented Computer Engineering student with a strong foundation in full-stack web development. Skilled in designing, developing, and deploying responsive web applications using modern technologies. Passionate about learning new tools and frameworks, and eager to apply problem-solving skills to real-world challenges. Looking for an entry-level position as a Full-Stack Developer or Software Developer to contribute to innovative projects and grow within a forward-thinking organization. .</p>
+                <p>I am a Student of Computer Engineering, honing my skills in full-stack web 
+                    development. My favorite part of programming is problem-solving—there’s nothing 
+                    quite like the thrill of finally cracking a tough bug (or realizing it was just a missing 
+                    semicolon). My core stack includes C++, JavaScript, React, Node.js, along with 
+                    experience in responsive Design and Databases. I'm always eager to explore new 
+                    technologies and stay ahead of the curve. I’m actively looking for a full-time position 
+                    as a software developer or full stack developer where I can build awesome 
+                    applications, sites, optimize performance, and maybe even automate some tedious 
+                    tasks along the way. When I’m not coding, you’ll find me playing cricket, watching 
+                    movies, or diving into random tech rabbit holes. If there’s a cool new framework, 
+                    you bet I’m testing it out!  </p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
