--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="header-text">
                 <p>Passionate About Full-Stack Development</p>
-                <h1>Hi, I'm <span><i class="fa-sharp fa-solid fa-g fa-flip fa-lg"></i>ourav <i class="fa-sharp fa-solid fa-s fa-flip fa-lg"></i>ingh</span><br></h1><h3>Crafting Scalable Solutions with Clean Code and Creative Vision</h3>
+                <h2>Hi, I'm <span><i class="fa-sharp fa-solid fa-g fa-flip fa-lg"></i>ourav <i class="fa-sharp fa-solid fa-s fa-flip fa-lg"></i>ingh</span></h2><br><h3>Crafting Scalable Solutions with Clean Code and Creative Vision</h3>
             </div>
         </div>
     </div>
