--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </div>
             <div class="header-text">
                 <p>Passionate About Full-Stack Development</p>
-                <h2>Hi, I'm <span><i class="fa-sharp fa-solid fa-g fa-flip fa-lg"></i>ourav <i class="fa-sharp fa-solid fa-s fa-flip fa-lg"></i>ingh</span></h2><br><h3>Crafting Scalable Solutions with Clean Code and Creative Vision</h3>
+                <h2>Hi,<br>  I'm <span><i class="fa-sharp fa-solid fa-g fa-flip fa-xl"></i>ourav</span> <i class="fa-sharp fa-solid fa-s fa- fa-lg"></i>ingh</h2><br><h3>Crafting Scalable Solutions with Clean Code and Creative Vision</h3>
+                <p>Design | Develop | Deploy | Repeat</p>
             </div>
         </div>
     </div>
@@ -51,8 +52,8 @@
                     as a software developer or full stack developer where I can build awesome 
                     applications, sites, optimize performance, and maybe even automate some tedious 
                     tasks along the way. When I’m not coding, you’ll find me playing cricket, watching 
-                    movies, or diving into random tech rabbit holes. If there’s a cool new framework, 
-                    you bet I’m testing it out!  </p>
+                    movies, or diving into random tech rabbit holes. 
+                   ~ </p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
