--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="header-text">
                 <p>Passionate About Full-Stack Development</p>
                 <h2>Hi,<br>  I'm <span><i class="fa-sharp fa-solid fa-g fa-flip fa-xl"></i>ourav</span> <i class="fa-sharp fa-solid fa-s fa- fa-lg"></i>ingh</h2><br><h3>Crafting Scalable Solutions with Clean Code and Creative Vision</h3>
-                <p>Design | Develop | Deploy | Repeat</p>
+                <p id="para">Design | Develop | Deploy | Repeat</p>
             </div>
         </div>
     </div>
